--- a/products.html
+++ b/products.html
@@ -43,26 +43,12 @@
       <h2>Productos</h2>
       <p>Estos son los productos a la venta</p>
     </div>
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Descripción</th>
-        <th>Categoría</th>
-        <th>Precio</th>
-        <th>Fotos</th>
-        <th>Código</th>
-      </tr>
-    </thead>
-    <tbody id=data></tbody>
-  </table>
-</div>
 
+    <div id="productos" class="text-center"></div>
 
     <footer class="text-muted bg-light">
       <div class="container">
-        <p>EMercado es un proyecto para el curso de JaP 2021 por Nicolás Zuccotti</p>
+        <p>EMercado es un proyecto para el curso de JaP 2021</p>
         <a href="#">Volver Arriba</a>
       </div>
     </footer>
