--- a/products.html
+++ b/products.html
@@ -1,68 +1,80 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <title>eMercado - Todo lo que busques está aquí</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/4.3/examples/album/"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
-      rel="stylesheet"
-    />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <title>eMercado - Todo lo que busques está aquí</title>
 
-  <body>
-    <nav class="site-header sticky-top py-1 bg-dark">
-      <div
-        class="container d-flex flex-column flex-md-row justify-content-between"
-      >
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" href="categories.html"
-          >Categorías</a
-        >
-        <a class="py-2 d-none d-md-inline-block" href="products.html"
-          >Productos</a
-        >
-        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      </div>
-    </nav>
-    <div class="container p-5">
-      <h2>Productos</h2>
-      <p>Estos son los productos a la venta</p>
-    </div>
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
+</head>
 
-    <div id="productos" class="text-center"></div>
-
-    <footer class="text-muted bg-light">
-      <div class="container">
-        <p>EMercado es un proyecto para el curso de JaP 2021</p>
-        <a href="#">Volver Arriba</a>
-      </div>
-    </footer>
-    <div id="spinner-wrapper">
-      <div class="lds-ring">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+<body>
+  <nav class="site-header sticky-top py-1 bg-dark">
+    <div class="container d-flex flex-column flex-md-row justify-content-between">
+      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+      <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+      <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <div id="info-user" style='display: none;'>
+        <p id="user"></p>
+        <button id="salir" style="display: none;">Salir</button>
       </div>
     </div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/products.js"></script>
-  </body>
+  </nav><br>
+  <div class="container">
+    <h2>Productos</h2>
+    <p>Estos son los productos a la venta</p>
+  </div>
+  <hr>
+  <div class="container">
+    <div>Ordenar
+      <button class="sortbutton" id="sortAsc">
+        <img src="img/arrow_up.png" title="Ascendente">
+      </button>
+      <button class="sortbutton" id="sortDes">
+        <img src="img/arrow_down.png" title="Descendente">
+      </button>
+      <button class="sortbutton" id="relevance">
+        <img src="img/graph.png" title="Relevancia">
+      </button>
+    </div>
+    <hr>
+    <div>
+      Precio:<br>
+      <input class="priceinput" type="number" min="0" placeholder="Min" id="priceMin">
+      <input class="priceinput" type="number" placeholder="Max" id="priceMax">
+      <button class="sortbutton" id="filter">Filtrar</button>
+      <button class="sortbutton" id="clean">Limpiar</button>
+    </div>
+  </div>
+  <div id="productos" class="text-center"></div>
+
+  <footer class="text-muted bg-light">
+    <div class="container">
+      <p>EMercado es un proyecto para el curso de JaP 2021</p>
+      <a href="#">Volver Arriba</a>
+    </div>
+  </footer>
+  <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/init.js"></script>
+  <script src="js/products.js"></script>
+</body>
+
 </html>
