--- a/categories.html
+++ b/categories.html
@@ -21,11 +21,17 @@
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <div id="info-user" style='display: none;'>
-          <p id="user"></p>
-          <button id="salir" style="display: none;">Salir</button>
+  
+        <div class="dropdown" id="info-user" style='display: none;'>
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="user" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false"></button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="cart.html">Carrito</a>
+            <a class="dropdown-item" href="my-profile.html">Perfil</a>
+            <a class="dropdown-item" id="salir" href="index.html">Salir</a>
           </div>
+        </div>
+  
       </div>
     </nav>
     <main role="main" class="pb-5">
