--- a/product-info.html
+++ b/product-info.html
@@ -37,7 +37,7 @@
 
     </div>
   </nav>
-  <div class="container">
+  <div class="container mt-3">
     <div id="detalles"></div>
     <div id="imagenes" class="container"></div>
   </div><br>
@@ -45,11 +45,11 @@
 
   <div class="container">
     <p>Productos Relacionados</p>
-    <div id="related">Coso</div><br>
-    <a href="products.html">Volver a Productos</a>
+    <div id="related" class=container></div><br>
+  <a href="products.html">Volver a Productos</a>
   </div>
-    <hr>
-    <h4 class="text-center">Comentarios</h4>
+  <hr>
+  <h4 class="text-center">Comentarios</h4>
   <hr>
 
   <div class="container" id="comments"></div>
@@ -114,6 +114,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/products.js"></script>
 </body>
 
 </html>
