--- a/categories.html
+++ b/categories.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <main role="main" class="pb-5">
-        <div class="text-center p-4">
+        <div class="text-center p-1">
             <h2>Categorías</h2>
             <p class="lead">Verás aquí todas las categorías del sitio.</p>
         </div>
@@ -85,11 +85,8 @@
     </main>
     <footer class="text-muted bg-light">
       <div class="container">
-        <p class="float-right">
-          <a href="#">Volver arriba</a>
-        </p>
-        <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-        <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+        <p>EMercado es un proyecto para el curso de JaP 2021</p>
+        <a href="#">Volver Arriba</a>
       </div>
     </footer>
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
