--- a/inicio.html
+++ b/inicio.html
@@ -103,13 +103,10 @@
         </div>
       </div>
     </main>
-    <footer class="text-muted">
+    <footer class="text-muted bg-light">
       <div class="container">
-        <p class="float-right">
-          <a href="#">Volver arriba</a>
-        </p>
-        <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-        <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+        <p>EMercado es un proyecto para el curso de JaP 2021</p>
+        <a href="#">Volver Arriba</a>
       </div>
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
