--- a/product-info.html
+++ b/product-info.html
@@ -96,20 +96,12 @@
     </form>
   </div>
 
-  <footer class="text-muted">
+  <footer class="text-muted bg-light">
     <div class="container">
       <p>EMercado es un proyecto para el curso de JaP 2021</p>
       <a href="#">Volver Arriba</a>
     </div>
   </footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
