--- a/products.html
+++ b/products.html
@@ -35,10 +35,10 @@
 
     </div>
   </nav>
-  <div class="text-center" id="productstitle">
-    <h2 >Productos</h2>
-    <p>Estos son los productos a la venta</p>
-  </div>
+  <div class="text-center p-1">
+    <h2>Productos</h2>
+    <p class="lead">Estos son los productos a la venta.</p>
+</div>
   <div class="cont">
     <div class="col text-right">Ordenar
       <button class="sortbutton" id="sortAsc">
@@ -67,14 +67,6 @@
       <a href="#">Volver Arriba</a>
     </div>
   </footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
