--- a/my-profile.html
+++ b/my-profile.html
@@ -11,23 +11,6 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
@@ -50,15 +33,90 @@
           <a class="dropdown-item" id="salir" href="index.html">Salir</a>
         </div>
       </div>
-
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+
+  <div class="text-center p-1">
+    <h2>Mi Perfil</h2>
+    <p class="lead">Aquí puede ver y modificar sus datos.</p>
+  </div>
+
+  <div class="container p-1 mb-5 bg-dark rounded">
+    <div class="row m-1">
+      <div class="col-sm-12 col-md-6">
+        <h3 class="text-center text-light">Perfil</h3>
+        <div class="row m-auto border bg-light rounded">
+          <div class="col-4">
+            Nombre:
+          </div>
+          <div class="col-8">
+            <p class="mb-2" id="Username"></p>
+          </div>
+          <div class="col-4">
+            Apellido:
+          </div>
+          <div class="col-8">
+            <p class="mb-2" id="Surname"></p>
+          </div>
+          <div class="col-4">
+            Edad:
+          </div>
+          <div class="col-8">
+            <p class="mb-2" id="Age"></p>
+          </div>
+          <div class="col-4">
+            Teléfono:
+          </div>
+          <div class="col-8">
+            <p class="mb-2" id="Phone"></p>
+          </div>
+          <div class="col-4">
+            Mail:
+          </div>
+          <div class="col-8">
+            <p class="mb-2" id="Mail"></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <h3 class="text-center text-light">Modifica tus datos</h3>
+        <div class="row m-auto p-2 border bg-light rounded">
+
+          <div class="col-4">
+            <label for="inputUsername">Nombre:</label>
+          </div>
+          <div class="col-8">
+            <input type="text" id="inputUsername" size="12">
+          </div>
+          <div class="col-4">
+            <label for="inputSurname">Apellido:</label>
+          </div>
+          <div class="col-8">
+            <input type="text" id="inputSurname" size="12">
+          </div>
+          <div class="col-4">
+            <label for="inputAge">Edad:</label>
+          </div>
+          <div class="col-8">
+            <input type="number" id="inputAge" min="0">
+          </div>
+          <div class="col-4">
+            <label for="inputPhone">Teléfono:</label>
+          </div>
+          <div class="col-8">
+            <input type="tel" id="inputPhone" size="12">
+          </div>
+          <div class="col-4">
+            <label for="inputMail">E-mail:</label>
+          </div>
+          <div class="col-8">
+            <input type="email" id="inputMail" size="12">
+          </div>
+          <div class="col-12 mt-3 text-right">
+            <button type="button" class="btn btn-outline-primary btn-sm" id="saveprofile">Guardar</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
